<resources>
    <string name="app_name">Sunshine Autos Inventory</string>
    <string name="missing_fields">Please fill all fields to insert a new item</string>
    <string name="no_item_updated">Unable to update item</string>
    <string name="no_changes">No changes made</string>
    <string name="no_item_added">Unable to add a new item</string>
    <string name="item_updated">Item updated successfully</string>
    <string name="item_added">Item added successfully</string>
    <string name="activity_label_new_item">New item</string>
    <string name="activity_label_modify_item">Modify item</string>
    <string name="dialog_message_discard_changes_label">Discard Changes?</string>
    <string name="order_summary_email_subject">%1$s Stock request</string>
    <string name="dialog_stock_request_label">Request Stock</string>
    <string name="button_discard_changes">Discard</string>
    <string name="button_keep_editing">Keep Editing</string>
    <string name="dialog_message_delete">Delete this item?</string>
    <string name="button_cancel">Cancel</string>
    <string name="item_deleted">Item deleted successfully</string>
    <string name="no_item_deleted">Unable to delete item</string>
    <string name="no_stock_updated">Unable to update stock</string>
    <string name="dialog_message_deleteAll">Delete all items?</string>
    <string name="no_stock_left">No more stock left on the selected product</string>
    <string name="dialog_send_order">Place stock order?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="place_order_reminder">Remember to place an order for new stock</string>
    <string name="dummy_data_option">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="permission_image">Permission needed to access to the device stored images</string>
    <string name="dummy_item_added">Dummy item added</string>
    <string name="empty_view_default_text">No items found,\n insert new items pressing the +1 button.</string>
    <string name="item_image_label">Touch the Image to modify/add it</string>
    <string name="item_name_label">Item</string>
    <string name="item_name_hint">(E.g. Cheetah)</string>
    <string name="item_price_label">Price</string>
    <string name="item_price_hint">(E.g. 84000)</string>
    <string name="item_brand_label">Brand</string>
    <string name="item_brand_hint">(E.g. Grotti)</string>
    <string name="item_quantity_label">Quantity</string>
    <string name="item_quantity_hint">(E.g. 3)</string>
    <string name="dummy_item_name">Sentinel</string>
    <string name="dummy_item_price">28000</string>
    <string name="dummy_item_brand">Übermacht</string>
    <string name="dummy_item_quantity">3</string>
    <string name="dummy_item_sales">0</string>
    <string name="item_quantity_units">Units</string>
    <string name="dialog_delete_label">Confirmation</string>
    <string name="item_sales_label">Sales</string>
    <string name="item_current_stock_label">Current stock</string>
    <string name="item_mod_stock_label_text">Modify Stock</string>
    <string name="button_subtraction">-</string>
    <string name="button_addition">+</string>
    <string name="currency">$</string>
    <string name="all_entries_deleted">All entries deleted</string>
</resources>
