<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    style="@style/scroll_view_style">

    <LinearLayout style="@style/editor_secondary_layout_style">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/category_style"
                android:text="@string/item_name_label" />

                <EditText
                    android:id="@+id/item_name"
                    style="@style/editor_field_style.replaced_layout_style"
                    android:hint="@string/item_name_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/category_style"
                android:text="@string/item_brand_label" />

                <EditText
                    android:id="@+id/item_brand"
                    style="@style/editor_field_style.replaced_layout_style"
                    android:hint="@string/item_brand_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/category_style"
                android:text="@string/item_price_label" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/item_price"
                    style="@style/editor_field_style"
                    android:hint="@string/item_price_hint"
                    android:inputType="number" />

                <TextView
                    style="@style/editor_units_style"
                    android:text="@string/currency" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity_label_textView"
                style="@style/category_style"
                android:text="@string/item_quantity_label" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/item_quantity"
                    style="@style/editor_field_style"
                    android:hint="@string/item_quantity_hint"
                    android:inputType="number" />

                <TextView
                    style="@style/editor_units_style"
                    android:text="@string/item_quantity_units" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sales_container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/category_style"
                android:text="@string/item_sales_label" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/item_sales"
                    style="@style/editor_field_style.salesStyle" />

                <TextView
                    style="@style/editor_units_style"
                    android:text="@string/currency" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_stock_container_layout"
            style="@style/category_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_mod_quantity_label"
                style="@style/category_label_style"
                android:text="@string/item_mod_stock_label_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_subtraction"
                    style="@style/added_quantity_buttons_style"
                    android:text="@string/button_subtraction" />

                <EditText
                    android:id="@+id/item_to_mod_quantity"
                    style="@style/item_to_add_quantity_style" />

                <Button
                    android:id="@+id/button_addition"
                    style="@style/added_quantity_buttons_style"
                    android:text="@string/button_addition" />

                <ImageView
                    android:id="@+id/stock_request"
                    style="@style/added_quantity_buttons_style.place_order_style"
                    android:src="@drawable/ic_send"

                    />

            </LinearLayout>

            <TextView
                android:id="@+id/place_order_reminder_label"
                style="@style/category_label_style.reminder_text_style"
                android:text="@string/place_order_reminder" />

        </LinearLayout>

        <RelativeLayout style="@style/item_image_layout_style">

            <TextView
                android:id="@+id/item_image_label"
                style="@style/category_label_style"
                android:text="@string/item_image_label" />

            <ImageView
                android:id="@+id/item_image"
                style="@style/item_image_style"
                android:layout_below="@+id/item_image_label"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
